# kys-cpp

./: .gitignore  CMakeLists.txt
bass24-osx/custloop/: custloop.c
bass24-osx/delphi/: bass.pas
bass24-osx/modtest/: modtest.c
bass24-osx/netradio/: netradio.c
bass24-osx/spectrum/: spectrum.c
bassmidi24-osx/: makefile.in
bassmidi24-osx/bassmidi.xcodeproj/: project.pbxproj
bassmidi24-osx/miditest/: makefile  miditest.c
bassmidi24-osx/miditest/miditest.nib/: info.nib  objects.xib
bassmidi24-osx/synth/: synth.c
bassmidi24-osx/synth/synth.nib/: info.nib  objects.xib
